Updating pipeline: PL_TSV_2_PARQUET Updating SnowflakeV2Table: Snowflake1

--- a/dataset/Snowflake1.json
+++ b/dataset/Snowflake1.json
@@ -7,10 +7,6 @@
 		},
 		"annotations": [],
 		"type": "SnowflakeV2Table",
-		"schema": [],
-		"typeProperties": {
-			"schema": "DAMG_SCHEMA",
-			"table": "SEATTLE_PET_LICENCES"
-		}
+		"schema": []
 	}
 }
