--- a/dataset/Snowflake1.json
+++ b/dataset/Snowflake1.json
@@ -7,6 +7,10 @@
 		},
 		"annotations": [],
 		"type": "SnowflakeV2Table",
-		"schema": []
+		"schema": [],
+		"typeProperties": {
+			"schema": "DAMG_SCHEMA",
+			"table": "PET_LIC_FCT"
+		}
 	}
 }
